# bangla-calendar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  STORE_SUBMISSION.md
.github/: changelog-config.json
.github/workflows/: ci.yml  release.yml  version-bump.yml
msix-package/: AppxManifest.xml  resources.pri  resources.scale-125.pri  resources.scale-150.pri  resources.scale-200.pri  resources.scale-400.pri
releases/: BanglaCalendar_0.0.2.0_x64.msix  BanglaCalendar_0.0.2.0_x64.msixupload
scripts/: build-msix.ps1  generate-msix-assets.ps1
src/: calendar.rs  constants.rs  fonts.rs  main.rs  main.rs.backup  menu.rs  punjika.rs  registry.rs  ui.rs
